--- a/client-android/MatLedControl/app/src/main/AndroidManifest.xml
+++ b/client-android/MatLedControl/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="de.oerntec.matledcontrol">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
