--- a/client-android/MatLedControl/app/build.gradle
+++ b/client-android/MatLedControl/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile group: 'org.zeromq', name: 'jeromq', version: '0.3.5'
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:support-v4:25.3.0'
+    compile 'com.android.support:support-v13:25.3.0'
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.pavelsikun:vintage-chroma:1.5'
