--- a/arduino/Makefile
+++ b/arduino/Makefile
@@ -1,8 +1,8 @@
 BOARD_TAG = nano328
 MONITOR_PORT = /dev/ttyUSB0
-
+include /usr/share/arduino/Arduino.mk
 ARDUINO_LIBS = FastLED
 
 ARDUINO_DIR=/usr/share/arduino
 ARDMK_DIR=/usr/share/arduino
-AVR_TOOLS_DIR=/usr/bin
+AVR_TOOLS_DIR=/usr/
