converted wordclock script to new format

--- a/host/assets/merets_wordclock_config.json
+++ b/host/assets/merets_wordclock_config.json
@@ -1,44 +1,26 @@
-{
-"type":"wordclock_config",
-"hours":["zero", "one", "two", "three", "four", "five", "six", "seven", "eight", "nine", "ten", "eleven"],
-"minutes":["o'clock", "five", "ten_minutes", "quarter", "twenty", "half"],
-"other":["to", "past", "minutes"],
-"configuration":[
-["HALF", "TWENTY"],
-["QUARTER", "FIVE"],
-["TEN", "MINUTES"],
-["TO", "PAST", "THREE"],
-["ONE", "TWO", "FOUR"],
-["TWELVE", "EIGHT"],
-["ELEVEN", "NINE"],
-["TEN", "SEVEN", "SIX"],
-["FIVE", "O'CLOCK"],
-[".", ".", ".", "."]],
-"config": [
-  ["HALF", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "minute_big"],
-  ["TWENTY", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "minute_big"],
-  ["QUARTER", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "minute_big"],
-  ["FIVE", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "minute_big"],
-  ["TEN", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "minute_big"],
-  ["MINUTES", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "other"],
-  ["TO", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "other"],
-  ["PAST", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "other"],
-  ["THREE", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["ONE", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["TWO", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["FOUR", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["TWELVE", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["EIGHT", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["ELEVEN", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["NINE", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["TEN", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["SEVEN", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["SIX", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["FIVE", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "hour"],
-  ["O'CLOCK", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "other"],
-  [".", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "minute_small_point"],
-  [".", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "minute_small_point"],
-  [".", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "minute_small_point"],
-  [".", [0,0], {"width": 4, "height": 1, "x": 0, "y": 0}, "minute_small_point"]
-]
-}
+{"small_minute_type": "minute_small_point", "config":
+[{"word": "HALF", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "minute_big", "info": 30},
+{"word": "TWENTY", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "minute_big", "info": 20},
+{"word": "QUARTER", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "minute_big", "info": 15},
+{"word": "FIVE", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "minute_big", "info": 5},
+{"word": "TEN", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "minute_big", "info": 10},
+{"word": "MINUTES", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "other", "info": "minutes"},
+{"word": "TO", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "other", "info": "to"},
+{"word": "PAST", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "other", "info": "past"},
+{"word": "THREE", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 3},
+{"word": "ONE", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 1},
+{"word": "TWO", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 2},
+{"word": "FOUR", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 4},
+{"word": "TWELVE", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 12},
+{"word": "EIGHT", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 8},
+{"word": "ELEVEN", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 11},
+{"word": "NINE", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 9},
+{"word": "TEN", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 10},
+{"word": "SEVEN", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 7},
+{"word": "SIX", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 6},
+{"word": "FIVE", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "hour", "info": 5},
+{"word": "O'CLOCK", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "other", "info": 0},
+{"word": ".", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "minute_small_point", "info": 0},
+{"word": ".", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "minute_small_point", "info": 1},
+{"word": ".", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "minute_small_point", "info": 2},
+{"word": ".", "pos": [0,0], "rect": {"width": 4, "height": 1, "x": 0, "y": 0}, "category": "minute_small_point", "info": 3}]}
