--- a/host/requirements.txt
+++ b/host/requirements.txt
@@ -1,6 +1,6 @@
 matplotlib
-pyserial==3.3
-freetype-py==1.0.2
-pyzmq==16.0.2
-numpy==1.12.1
-typing==3.6.1
+pyserial
+freetype-py
+pyzmq
+numpy
+typing
