updated gradle, implemented color randomization function

--- a/client-android/MatLedControl/app/build.gradle
+++ b/client-android/MatLedControl/app/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    flavorDimensions "default"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "de.oerntec.matledcontrol"
         minSdkVersion 21
