--- a/client-android/MatLedControl/app/build.gradle
+++ b/client-android/MatLedControl/app/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     compile 'com.android.support:support-v13:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
     compile 'com.jraska:console-timber-tree:0.4.3'
     compile 'com.pavelsikun:vintage-chroma:1.5'
-    testCompile 'junit:junit:4.12'
+    compile 'com.edmodo:rangebar:1.0.0'
 }
