--- a/client-android/MatLedControl/app/build.gradle
+++ b/client-android/MatLedControl/app/build.gradle
@@ -43,5 +43,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.jraska:console-timber-tree:0.4.3'
     compile 'com.pavelsikun:vintage-chroma:1.5'
-    compile 'com.edmodo:rangebar:1.0.0'
+    compile ('com.appyvet:materialrangebar:1.4.1') {
+        exclude module: 'support-compat'
+    }
 }
