--- a/client-android/MatLedControl/app/build.gradle
+++ b/client-android/MatLedControl/app/build.gradle
@@ -34,13 +34,17 @@ dependencies {
     })
     compile group: 'org.zeromq', name: 'jeromq', version: '0.3.5'
 
-    // begin wonky libs i include because i didnt wanna code myself
+    compile 'com.google.code.gson:gson:2.8.2'
+
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-v13:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+    // begin wonky libs i include because i didnt wanna code myself
     compile 'com.jraska:console-timber-tree:0.4.3'
     compile 'com.pavelsikun:vintage-chroma:1.5'
     compile ('com.appyvet:materialrangebar:1.4.1') {
