--- a/client-android/MatLedControl/app/build.gradle
+++ b/client-android/MatLedControl/app/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 29
     flavorDimensions "default"
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '30.0.1'
     defaultConfig {
         applicationId "de.oerntec.matledcontrol"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 29
         versionCode 102
         versionName "1.0.2"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -19,35 +18,35 @@ android {
         }
     }
     productFlavors {
-        main {
+        ledmatrix {
         }
         wordclock {
             applicationId "de.oerntec.wordclockcontrol"
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile group: 'org.zeromq', name: 'jeromq', version: '0.3.5'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation group: 'org.zeromq', name: 'jeromq', version: '0.5.2'
 
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:support-v13:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-v13:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // begin wonky libs i include because i didnt wanna code myself
-    compile 'com.jraska:console-timber-tree:0.4.3'
-    compile 'com.pavelsikun:vintage-chroma:1.5'
-    compile ('com.appyvet:materialrangebar:1.4.1') {
+    implementation 'com.jraska:console-timber-tree:0.4.3'
+    implementation 'com.pavelsikun:vintage-chroma:1.5'
+    implementation ('com.appyvet:materialrangebar:1.4.1') {
         exclude module: 'support-compat'
     }
 }
